[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/games.kivano.editor/contents/GroupManager/GroupManagerWindow.gd" type="Script" id=1]
[ext_resource path="res://addons/games.kivano.editor/contents/GroupManager/GroupInfoWin/GroupInfoWin.tscn" type="PackedScene" id=2]

[node name="Group Manager" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -70.0
margin_bottom = -12.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="Title" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 112.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Groups"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GroupList" type="ItemList" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
items = [  ]
select_mode = 0
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )

[node name="GroupDesc" parent="." index="2" instance=ExtResource( 2 )]

visible = false
margin_left = -285.0
margin_top = -235.0
margin_right = 342.0
margin_bottom = 288.0

[node name="RefreshBtn" type="Button" parent="." index="3"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -60.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Refresh"
flat = false
align = 1

[node name="debug" type="RichTextLabel" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 65.0
margin_right = 348.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[connection signal="item_activated" from="GroupList" to="." method="_on_GroupList_item_activated"]

[connection signal="onSave" from="GroupDesc" to="." method="_on_GroupDesc_onSave"]

[connection signal="pressed" from="RefreshBtn" to="." method="_on_RefreshBtn_pressed"]


